 - Switched UI shortcuts from a global event handler to UI::handle.
 - Bound Ctrl+Space to toggle fullscreen mode.
 - Switched dillo to push a URL with fragment (anchor) into the stack.
 - Added a workaround for a CCC reentrancy segfault.
 - Bound FltkMultiLineTextResource to the html parser (TEXTAREA).
 - Added code to ignore the first <P> after <LI>.
   Patches: Jorge Arellano Cid
+- Connected signals to <li> elements (fixes links within lists).
 - Enabled text, background-color, panel_size, geometry, fullscreen,
   start_page, geometry offset and limit_text_width in preferences.
 - Enabled clicking over image links.
 - Improved notification upon leaving links.
 - Implemented image-link URL showing in status bar.
 - Added missing size-parsing for the <hr> element.
 - Hooked "Activate" to the form_receiver.
 - Connected the plain page context menu.
 - Added code for the image menu and hooked it to dw2 signals.
 - Hooked the page and link menus.
 - Added a image-loading toggle button to the UI.
 - Enabled hiding widgets of the control panel from dillorc2.
 - Added a save-directory preference (save_dir in dillorc2).
 - Fixed page-popup-menu to use the stack's top URL instead of base_url.
 - Added the "static" qualifier where missing.
 - Bound "Copy link location".
 - Bound preliminar find text support.
 - Added line numbers and enabled wrapping in the "View Source" window.
 - Added HTTP-1.1's chunked transfer support!
 - Made the stop button sensitive when loading an image.
 - Added more statics in dpi, const in pixmaps, and removed redundant includes.
 - Made cleanups in prefs (hiding local data/defs/symbols).
 - Fixed a segfault in cookies.c when no .dillo directory exists.
 - Added a MSG_HTTP for HTTP/1.1's warning headers.
 - Added support for multi-line header fields.
 - Added support for "charset" in the HTTP header field for Content-Type.
 - Added support for progressive display of progressive jpegs.
 - Fixed progressive display of interlaced pngs.